--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input type="number" id="leg_h" class="form-control">
                         <br><br>
                         <div class="d-grid gap-2">
-                            <button class="btn btn-primary btn-lg">Calculate</button>
+                            <button class="btn btn-primary btn-lg" onclick="area()" type="submit">Calculate</button>
                         </div>
                         <br><br>
                         <label for="result" class="form-label">Result</label>
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
-    
+    <script src="cal.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
